# extenddb

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  SECURITY.md  extenddb-mongo.toml  extenddb.sample.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  rfc.md
.github/workflows/: npm-publish.yml  release-please.yml
crates/auth/: Cargo.toml
crates/auth/src/: cache_registry.rs  credential_cache.rs  lib.rs
crates/cache/: Cargo.toml
crates/cache/src/: entry.rs  lib.rs  swr.rs  tests.rs
crates/core/src/: serde_helpers.rs
crates/engine/: Cargo.toml
crates/engine/src/: backup.rs  batch_get_item.rs  create_table.rs  delete_item.rs  delete_table.rs  expression_helpers.rs  get_item.rs  import_export.rs  import_export_io.rs  index_helpers.rs  lib.rs  put_item.rs  query.rs  scan.rs  tagging.rs  transact_get_items.rs  transact_write_helpers.rs  transact_write_items.rs  update_item.rs  update_table.rs
crates/server/: Cargo.toml
crates/storage-mongodb/: Cargo.toml
crates/storage-mongodb/src/: admin_store.rs  authorization_store.rs  backup_engine.rs  bootstrapper.rs  catalog_store.rs  condition.rs  config.rs  credential_store.rs  data_engine.rs  lib.rs  management_store.rs  metadata_engine.rs  stream_engine.rs  table_engine.rs  ttl_worker.rs  worker_store.rs
crates/storage-mongodb/src/data/: mod.rs
devtools/: run-tests
docs/: getting-started.md  local-mongodb-setup.md
docs/design/: 11-high-availability.md  12-auth-authz-cache.md  13-storage-mongodb.md
docs/manuals/: 05-admin-guide.md  06-developer-test-guide.md  12-extending-extenddb-storage.md
npm/extenddb/: package.json
tests/: conftest.py  test_cache_coherence.py  test_console_cache_coherence.py  test_import_export.py  test_item_operations.py  test_query_scan.py  test_streams.py  test_table_operations.py
(+64 files in other folders)
