# Copyright 2026 ExtendDB contributors
# SPDX-License-Identifier: Apache-2.0

[package]
name = "extenddb-storage-mongodb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Internal crates
extenddb-core.workspace = true
extenddb-storage.workspace = true
extenddb-auth.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
bson = "2.13"

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true

# Backend registry
inventory.workspace = true

# MongoDB driver
mongodb = "3"

# Crypto & checksums
uuid.workspace = true
base64.workspace = true
bcrypt.workspace = true
aes-gcm.workspace = true
rand.workspace = true
zeroize.workspace = true

# Time
time.workspace = true

# Logging
tracing.workspace = true

# Checksums
crc32fast.workspace = true

# Cursor cache for pagination
dashmap = "6"
